--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -4,14 +4,32 @@ on:
   push:
     branches:
       - main
-
-jobs:
-  publish-docker:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: build-image
-      - run: |
-      docker login ghcr.io -u HarryLees --password-stdin
-      env:
-        CR_PAT: ${{ secrets.CR_PAT }}
+      - name: set-metadata
+        id: docker_meta
+        uses: crazy-max/ghaction-docker-meta@v1
+        with:
+          images: ghcr.io/gbaeke/rgapi
+          tag-sha: true
+          tag-edge: false
+          tag-latest: true
+      - name: qemu
+        uses: docker/setup-qemu-action@v1
+      - name: docker-buildx
+        uses: docker/setup-buildx-action@v1
+      - name: container-registry-login
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: build
+        uses: docker/build-push-action@v2
+        with:
+          tags: ${{ steps.docker_meta.outputs.tags }} 
+          file: ./Dockerfile
+      - name: push
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          tags: ${{ steps.docker_meta.outputs.tags }}
+          file: ./Dockerfile
