--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -8,35 +8,35 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-  steps:
-    - name: checkout
-      uses: actions/checkout@v2
-    - name: set-metadata
-      id: docker_meta
-      uses: crazy-max/ghaction-docker-meta@v1
-      with:
-        images: ghcr.io/gbaeke/rgapi
-        tag-sha: true
-        tag-edge: false
-        tag-latest: true
-    - name: qemu
-      uses: docker/setup-qemu-action@v1
-    - name: docker-buildx
-      uses: docker/setup-buildx-action@v1
-    - name: container-registry-login
-      uses: docker/login-action@v1
-      with:
-        registry: ghcr.io
-        username: ${{ github.repository_owner }}
-        password: ${{ secrets.GITHUB_TOKEN }}
-    - name: build
-      uses: docker/build-push-action@v2
-      with:
-        tags: ${{ steps.docker_meta.outputs.tags }} 
-        file: ./Dockerfile
-    - name: push
-      uses: docker/build-push-action@v2
-      with:
-        push: true
-        tags: ${{ steps.docker_meta.outputs.tags }}
-        file: ./Dockerfile
+    steps:
+      - name: checkout-repo
+        uses: actions/checkout@v2
+      - name: set-metadata
+        id: docker_meta
+        uses: crazy-max/ghaction-docker-meta@v1
+        with:
+          images: ghcr.io/gbaeke/rgapi
+          tag-sha: true
+          tag-edge: false
+          tag-latest: true
+      - name: qemu
+        uses: docker/setup-qemu-action@v1
+      - name: docker-buildx
+        uses: docker/setup-buildx-action@v1
+      - name: container-registry-login
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: build
+        uses: docker/build-push-action@v2
+        with:
+          tags: ${{ steps.docker_meta.outputs.tags }} 
+          file: ./Dockerfile
+      - name: push
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          tags: ${{ steps.docker_meta.outputs.tags }}
+          file: ./Dockerfile
