--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,15 +1,30 @@
-name: build-and-deploy-docker
+name: test
 
-on:
-  push:
-    branches:
-      - main
+on: [push, pull_request]
 
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
+  PYTHON_VERSION: "3.10"
 
 jobs:
+  flake8:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+    steps:
+    - name: checkout-repo
+      uses: actions/checkout@v3
+    - name: setup-python
+      uses: actions/setup-python@v2
+      with:
+        python-version: ${{ env.PYTHON_VERSION }}
+    - name: install-poetry
+      run: python -m pip install poetry
+    - name: install-deps
+      run: poetry install
+    - name: test
+      run: python -m flake8
   build:
     runs-on: ubuntu-latest
     permissions:
