--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -30,6 +30,7 @@ jobs:
     permissions:
       contents: read
       packages: write
+    needs: flake8
     steps:
       - name: checkout-repo
         uses: actions/checkout@v3
