--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -25,6 +25,40 @@ jobs:
       run: poetry install
     - name: test
       run: poetry run flake8
+  mypy:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+    steps:
+    - name: checkout-repo
+      uses: actions/checkout@v3
+    - name: setup-python
+      uses: actions/setup-python@v2
+      with:
+        python-version: ${{ env.PYTHON_VERSION }}
+    - name: install-poetry
+      run: python -m pip install poetry
+    - name: install-deps
+      run: poetry install
+    - name: test
+      run: poetry run mypy
+  pytest:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+    steps:
+    - name: checkout-repo
+      uses: actions/checkout@v3
+    - name: setup-python
+      uses: actions/setup-python@v2
+      with:
+        python-version: ${{ env.PYTHON_VERSION }}
+    - name: install-poetry
+      run: python -m pip install poetry
+    - name: install-deps
+      run: poetry install
+    - name: test
+      run: poetry run pytest tests/
   build:
     runs-on: ubuntu-latest
     permissions:
