--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -59,7 +59,7 @@ jobs:
     - name: install-deps
       run: poetry install
     - name: test
-      run: poetry run pytest tests/
+      run: poetry run pytest
   build:
     runs-on: ubuntu-latest
     permissions:
